--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.3.1",
-    "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
+    "@react-navigation/material-top-tabs": "^5.2.2",
+    "@react-navigation/native": "^5.2.1",
+    "@react-navigation/stack": "^5.2.16",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-cardview": "^2.0.5",
@@ -28,11 +29,13 @@
     "react-native-maps": "^0.27.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-options-menu": "^2.0.2",
+    "react-native-push-notification": "^3.4.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.8",
     "react-native-shadow-cards": "^1.0.2",
+    "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-props-mapper": "^1.0.2",
     "react-redux": "^7.2.0",
